# p2p

./: README.md  p2p.cabal  stack.yaml  txos_log
.stack-work/install/6c953ab2/flag-cache/: async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  network-2.6.3.2-F0OcsS89osODGCGHNf1FTk  p2p-0.1.0.0-6n0WPTa0UB8GnQlfIhCsVe  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve
.stack-work/install/6c953ab2/lib/x86_64-windows-ghc-8.0.2/p2p-0.1.0.0-6n0WPTa0UB8GnQlfIhCsVe/: Lib.hi
.stack-work/install/6c953ab2/pkgdb/: p2p-0.1.0.0-6n0WPTa0UB8GnQlfIhCsVe.conf  package.cache
app/: .Main.hs.swp  Main.hs  Run.hs  txos_log
src/: Discovery.hs  Interactive.hs  Lib.hs  Message.hs  Peers.hs  Transactions.hs
