name:                p2p
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/p2p#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Moschos
                     Andreas Triantafyllos
                     Kostas Dermentzis
maintainer:
copyright:           2017
                     Alexander Moschos
                     Andreas Triantafyllos
                     Kostas Dermentzis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time
                     , async
                     , containers
                     , network
                     , stm
                     , hostname
  default-language:    Haskell2010

executable p2p-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , p2p
                     , time
                     , async
                     , containers
                     , network
                     , stm
                     , random
                     , hostname
  default-language:    Haskell2010

test-suite p2p-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , p2p
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@gitlab.well-typed.com:iohk-hc2017/team-unsafePerformIO.git

